--- a/src/components/atoms/Input/index.css
+++ b/src/components/atoms/Input/index.css
@@ -9,10 +9,14 @@
 
 .input {
   outline: 0;
-  border: 1px solid gray;
+  border: 2px solid gray;
   width: 100%;
   padding: 8px;
   border-radius: 12px;
   font-size: 14px;
   box-sizing: border-box;
+}
+
+.input:focus {
+  border: 2px solid blue;
 }
