--- a/src/components/atoms/Select/index.css
+++ b/src/components/atoms/Select/index.css
@@ -18,7 +18,7 @@
 
 .select {
   outline: 0;
-  border: 1px solid gray;
+  border: 2px solid gray;
   width: 100%;
   padding: 8px;
   border-radius: 12px;
@@ -26,4 +26,8 @@
   box-sizing: border-box;
   -webkit-appearance: none;
   appearance: none;
+}
+
+.select:focus {
+  border: 2px solid blue;
 }
