--- a/src/components/molecules/Filter/index.css
+++ b/src/components/molecules/Filter/index.css
@@ -6,7 +6,7 @@
 }
 
 .filter-label-block {
-  background-color: #d1d1d1;
+  background-color: #dedddd;
   padding: 12px 15px;
   font-weight: 700;
   border-top-left-radius: 10px;
