--- a/src/components/views/SalesIntegrations/index.css
+++ b/src/components/views/SalesIntegrations/index.css
@@ -3,6 +3,22 @@
   display: inline-block;
 }
 
+.sales-integrations-filter-block-header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+}
+
+.sales-integrations-filter {
+  flex-grow: 1;
+}
+
+.sales-integrations-sort {
+  margin-left: 16px;
+  width: 180px;
+}
+
 .list-block-label {
   margin-top: 16px;
   font-size: 18px;
@@ -11,14 +27,15 @@
 
 .list-block {
   margin-top: 8px;
-  border: 2px solid gray;
+  border: 2px solid #a9a9a9;
   padding: 8px;
   border-radius: 12px;
+  background-color: white;
 }
 
 .list-item {
   border-bottom: 1px solid gray;
-  padding: 4px 8px;
+  padding: 4px 8px 12px 8px;
   margin-bottom: 12px;
   font-size: 14px;
 }
