--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,20 @@ body {
     'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
   padding: 0;
+
+  background-color: #e3e3e3;
 }
 
 .view {
-  padding: 50px;
+  margin: 50px;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
